# the-genious-square-all-paths-explored

./: .gitignore  Cargo.toml  build.rs  log.txt  perf.data  perf.data.old  solutions  test.txt
cpu_crate/: Cargo.toml  build.rs
cpu_crate/builder/: Cargo.toml
cpu_crate/builder/src/: main.rs
cpu_crate/src/: compute.rs  graphics.rs  lib.rs  main.rs
finding_the_one_with_the_lowest/: Cargo.toml  log2.txt  test.txt
finding_the_one_with_the_lowest/src/: main.rs
gpu-crate/: Cargo.toml
gpu-crate/src/: main.rs
src/: app.rs  args.rs  bitmap.rs  board.rs  dices.rs  generated_bitboards.rs  main.rs  pieceboard.rs  pieces.rs
src/bevy/: app.rs  mod.rs  slider.rs
src/iter/: board_iterator.rs  dice_combinations.rs  mod.rs
