[package]
name = "the-genious-square-all-paths-explored"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "0.13.2", features = ["dynamic_linking"] }
clap = { version = "4.5.4", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.12.1"
rand = "0.8.5"
rayon = "1.10.0"

[build-dependencies]
proc-macro2 = "1.0.71"
quote = "*"
syn = "*"
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[workspace]
members = ["cpu_crate", "finding_the_one_with_the_lowest", "gpu-crate"]
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
