[package]
name = "the-genious-square-all-paths-explored"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#arrayvec = "0.7.4"
#bevy = "0.12.1"
clap = { version = "4.4.11", features = ["derive"] }
indicatif = { version = "0.18.0", features = ["rayon"] }
itertools = "0.14.0"
rand = "0.9.2"
rayon = "1.8.0"
no-panic = "0.1"


[build-dependencies]
proc-macro2 = "1.0.71"
quote = "*"
syn = "*"

[profile.release]
lto = "fat"
codegen-units = 1
