[package]
name = "cpu_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytemuck = "1.9"
image = "0.24"
pollster = "0.3.0"
wgpu = "0.18.0"

[build-dependencies]
spirv-builder = "0.9.0"
